; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_port.c_ipc_port_copyout_name_send.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_port.c_ipc_port_copyout_name_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_MSG_TYPE_PORT_SEND = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@KERN_INVALID_CAPABILITY = common dso_local global i64 0, align 8
@MACH_PORT_DEAD = common dso_local global i32 0, align 4
@MACH_PORT_NULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipc_port_copyout_name_send(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i64, i64* %4, align 8
  %9 = call i64 @IP_VALID(i64 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %34

11:                                               ; preds = %3
  %12 = load i32, i32* %5, align 4
  %13 = load i64, i64* %4, align 8
  %14 = trunc i64 %13 to i32
  %15 = load i32, i32* @MACH_MSG_TYPE_PORT_SEND, align 4
  %16 = load i32, i32* @TRUE, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i64 @ipc_object_copyout_name(i32 %12, i32 %14, i32 %15, i32 %16, i32 %17)
  store i64 %18, i64* %7, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load i64, i64* @KERN_SUCCESS, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %33

22:                                               ; preds = %11
  %23 = load i64, i64* %4, align 8
  %24 = call i32 @ipc_port_release_send(i64 %23)
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* @KERN_INVALID_CAPABILITY, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %22
  %29 = load i32, i32* @MACH_PORT_DEAD, align 4
  store i32 %29, i32* %6, align 4
  br label %32

30:                                               ; preds = %22
  %31 = load i32, i32* @MACH_PORT_NULL, align 4
  store i32 %31, i32* %6, align 4
  br label %32

32:                                               ; preds = %30, %28
  br label %33

33:                                               ; preds = %32, %11
  br label %37

34:                                               ; preds = %3
  %35 = load i64, i64* %4, align 8
  %36 = call i32 @CAST_MACH_PORT_TO_NAME(i64 %35)
  store i32 %36, i32* %6, align 4
  br label %37

37:                                               ; preds = %34, %33
  %38 = load i32, i32* %6, align 4
  ret i32 %38
}

declare dso_local i64 @IP_VALID(i64) #1

declare dso_local i64 @ipc_object_copyout_name(i32, i32, i32, i32, i32) #1

declare dso_local i32 @ipc_port_release_send(i64) #1

declare dso_local i32 @CAST_MACH_PORT_TO_NAME(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
